# rl_lab

./: .pre-commit-config.yaml  README.en.md  README.md  pyproject.toml
assets/: q-learning-pendulum.mov
docs/: q-learning.en.md  q-learning.md
src/: main.py  pendulum.py  pendulum_env.py  pendulum_sim.py  policy_renderer.py  q_agent.py  simulation.py
src/pendulum/: env.py  sim.py
src/rl_lab/: main.py
src/rl_lab/agents/: q_agent.py
src/rl_lab/engine/: policy_renderer.py
src/rl_lab/pendulum/: env.py  sim.py
